--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "prisma": "^6.12.0"
   }
 }
