--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@prisma/client": "6.12.0",
     "fastify": "^5.4.0",
-    "prisma": "^6.12.0"
+    "prisma": "^6.12.0",
+    "uuid": "^11.1.0"
   }
 }
