--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "6.12.0",
     "fastify": "^5.4.0",
     "prisma": "^6.12.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.0.14"
   }
 }
