--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.1.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
@@ -20,6 +21,7 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/static": "^8.2.0",
     "@prisma/client": "6.12.0",
+    "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
     "prisma": "^6.12.0",
     "uuid": "^11.1.0",
